fix font size, make stacking match design (#109)
* fix font size, make stacking match design

* add back horizontal for desktop view

* remove extra space

* make accent-block text white

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -167,8 +167,10 @@ body {
       background: #E07926;
       color: white;
       .steps-text {
-        .steps-title, .steps-description {
-          color: white;
+        .text-container {
+          .steps-title, .steps-description {
+            color: white;
+          }
         }
       }
     }
